Fixed rendering on IE6 (again). Now redirect_to :back sends quick step completes back to the same view.
git-svn-id: svn://localhost/bondiproj@969 2f9c37dc-1a64-0410-9d15-b29d5ae7ab4c

--- a/uva/trunk/public/stylesheets/application.css
+++ b/uva/trunk/public/stylesheets/application.css
@@ -75,7 +75,6 @@ body {
 
 * html #steps_buttons {
 	float: right;
-	width: 75px;
 }
 
 #sidebar1 h1 {
